@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-19T16:19:35Z",
-  "count_outdated" : 1202,
-  "uniques_outdated" : 758,
-  "count" : 1210,
-  "uniques" : 762,
+  "timestamp" : "2024-02-20T16:18:20Z",
+  "count_outdated" : 1204,
+  "uniques_outdated" : 759,
+  "count" : 1211,
+  "uniques" : 763,
   "clones" : [
-    {
-      "timestamp": "2024-02-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-07T00:00:00Z",
       "count": 2,
@@ -37,6 +28,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
