@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-02-06T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-07T00:00:00Z",
       "count": 2,
@@ -20,6 +15,11 @@
     {
       "timestamp": "2024-02-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
