@@ -1,3 +1,12 @@
+2024-02-20T16:18:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7976613234 # 134
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 758 1202 / 762 1210
+* notice: next accum: outdated-unq outdated-all / unq all: 759 1204 / 763 1211
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-02-06] / [2024-02-20]
+
 2024-02-19T16:19:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7962511381 # 131
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
